<resources>
    <string name="alivc_longvideo_app_name">LongVideo</string>
    <string name="alivc_longvideo_home_title">Home</string>
    <string name="alivc_longvideo_VIP_title">VIP</string>
    <string name="alivc_longvideo_mine_title">Me</string>
    <string name="alivc_longvideo_user_nickname">Name</string>
    <string name="alivc_longvideo_watch_history_title">History</string>
    <string name="alivc_longvideo_cache_video_title">Cache Videos</string>
    <string name="alivc_longvideo_cache_video_edit">Edit</string>
    <string name="alivc_longvideo_singleset_title">Videos</string>
    <string name="alivc_longvideo_series_title">Categories</string>
    <string name="alivc_longvideo_more_content">More</string>
    <string name="alivc_longvideo_mine_setting">Settings</string>
    <string name="alivc_longvideo_nickname">Name</string>
    <string name="alivc_longvideo_avatar">Profile</string>
    <string name="alivc_longvideo_introduction">Description</string>
    <string name="alivc_longvideo_introduction_content">Enter a description here</string>
    <string name="alivc_longvideo_video_download_number">Concurrent Downloads</string>
    <string name="alivc_longvideo_download_sharpness">Download Quality</string>
    <string name="alivc_longvideo_doawload_operator">Download on Provider Network</string>
    <string name="alivc_longvideo_auto_play">Autoplay on Provider Network</string>
    <string name="alivc_longvideo_hard_decoding">Hardware Decoding</string>
    <string name="alivc_longvideo_save">Save</string>

    <string name="alivc_longvideo_quality_sd">LD</string>
    <string name="alivc_longvideo_quality_hd">SD</string>
    <string name="alivc_longvideo_quality_ssd">HD</string>
    <!--标清-->
    <string name="alivc_longvideo_quality_chinese_sd">SD</string>
    <!--高清-->
    <string name="alivc_longvideo_quality_chinese_hd">HD</string>
    <!--超清-->
    <string name="alivc_longvideo_quality_chinese_ssd">SSD</string>

    <string name="alivc_longvideo_setting_vip">Switch to VIP</string>

    <!--缓存页面-->
    <string name="alivc_longvideo_cachevideo_delete">Delete</string>
    <string name="alivc_longvideo_cachevideo_all_selected">Select All</string>
    <string name="alivc_longvideo_cachevideo_un_all_selected">Clear All</string>

    <string name="alivc_longvideo_cachevideo_not_cachevideo">- No cached video is found -</string>
    <string name="alivc_longvideo_cachevideo_not_video">- No video is found -</string>
    <string name="alivc_longvideo_cachevideo_not_watch_history">- No history is found -</string>
    <string name="alivc_longvideo_cachevideo_delected_cachevideo">Deleted</string>
    <string name="alivc_longvideo_no_watch">未观看</string>
    <string name="alivc_longvideo_is_watch">已观看</string>

    <string name="alivc_longvideo_all_series_title">Full Playlist</string>
    <string name="alivc_longvideo_series_cache_title">Select Videos</string>
    <string name="alivc_longvideo_series_cache_title_multiple_selection">Multiple Select</string>
    <string name="alivc_longvideo_series_cache_current_definition">Quality： </string>
    <string name="alivc_longvideo_series_cache_downloaded">Selected Videos</string>
    <string name="alivc_longvideo_series_cache_confirm_download">OK</string>
    <string name="alivc_longvideo_series_cache_storage_tips">Space Required%s,Space Remaining%</string>
    <string name="alivc_longvideo_series_cache_storage_residue">Space Remaining%</string>
    <string name="alivc_longvideo_series_all_number">%dVideos</string>
    <string name="alivc_longvideo_series_all_number_list">%dVideos</string>
    <string name="alivc_longvideo_series">Full Playlist</string>
    <string name="alivc_longvideo_play_share">Share To</string>
    <string name="alivc_longvideo_play_vip">VIP</string>
    <string name="alivc_longvideo_play_consult">当前视频</string>
    <string name="alivc_longvideo_play_similar_videolist">Up Next</string>
    <string name="alivc_longvideo_series_set">全%1$s集</string>
    <string name="alivc_longvideo_vip_enrer_details"><![CDATA[View Details >>]]></string>
    <string name="alivc_longvideo_video_info">视频信息不能为空</string>
    <string name="alivc_longvideo_moble_operator_dialog_message">You are connected to a mobile network. Continue?</string>
    <string name="alivc_longvideo_dialog_continue">Continue</string>
    <string name="alivc_longvideo_video_cache_storage_tips">Videos Cached%s,Space Remaining%s</string>
    <string name="alivc_longvideo_video_cache_item_number_watch">%s个视频  %s已观看</string>
    <string name="alivc_longvideo_request_permission_positive_btn_text">Settings</string>
    <string name="alivc_longvideo_request_permission_negative_btn_text">暂不设置</string>
    <string name="alivc_longvideo_request_permission_content_text"><![CDATA[需要访问 \"外部存储器\",否则会影响功能使用, 请到 \"应用信息 -> 权限\" 中设置！]]></string>
    <string name="alivc_longvideo_user_info">User Info</string>
    <string name="alivc_longvideo_cache_ing">正在缓存</string>
    <string name="alivc_longvideo_cache_fail">下载失败</string>
    <string name="alivc_longvideo_cache_wait">等待下载</string>
    <string name="alivc_longvideo_cache_stop">暂停下载</string>
    <string name="alivc_longvideo_cache_toast_4g">Connect to a WiFi or enable Download on Provider Network</string>
    <string name="aliyun_net_error">当前无网络,请连网后重试!</string>
    <string name="alivc_longvideo_not_network_retry">No network connection is found. Click to try again！</string>
    <string name="alivc_longvideo_exit_application">Click again to exit the app</string>

    <string-array name="alivc_longvideo_download_video_limit_number">
        <item> 1</item>
        <item> 2</item>
        <item> 3</item>
        <item> 4</item>
        <item> 5</item>
    </string-array>
    <string name="alivc_longvideo_toast_less_storage">Your phone does not have sufficient space</string>
    <string name="alivc_longvideo_toast_add_download">Added to the download list</string>

    <string name="alivc_longvideo_player_vip_cache_toast">Only VIPs can cache VIP videos</string>
    <string name="alivc_longvideo_player_loacl_cache_toast">Local videos cannot be cached</string>


</resources>
