<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/alivc_rl_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/alivc_common_margin_20"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/alivc_iv_header"
                android:layout_width="@dimen/alivc_common_size_group_72"
                android:layout_height="@dimen/alivc_common_size_group_72"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/alivc_common_margin_20"
                android:layout_marginLeft="@dimen/alivc_common_margin_20"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/alivc_iv_header"
                android:layout_toRightOf="@+id/alivc_iv_header"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/alivc_tv_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/alivc_common_margin_20"
                    android:layout_marginLeft="@dimen/alivc_common_margin_20"
                    android:textColor="@color/alivc_longvideo_font_black"
                    android:textSize="@dimen/alivc_common_font_18"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/alivc_tv_introduction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/alivc_common_margin_20"
                    android:layout_marginLeft="@dimen/alivc_common_margin_20"
                    android:layout_marginTop="@dimen/alivc_common_margin_6"
                    android:maxLines="2"
                    android:text="@string/alivc_longvideo_introduction_content"
                    android:textColor="@color/alivc_longvideo_font_more"
                    android:textSize="@dimen/alivc_common_font_13" />
            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/alivc_watch_history_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/alivc_common_margin_18"
            android:layout_marginLeft="@dimen/alivc_common_margin_18"
            android:layout_marginTop="@dimen/alivc_common_margin_36"
            android:text="@string/alivc_longvideo_watch_history_title"
            android:textColor="@color/alivc_common_bg_black"
            android:textSize="@dimen/alivc_common_font_15"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/alivc_watch_history_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/alivc_common_margin_12"
            android:layout_marginLeft="@dimen/alivc_common_margin_12"
            android:layout_marginTop="@dimen/alivc_common_margin_12" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alivc_cache_video_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/alivc_common_margin_18"
                android:layout_marginLeft="@dimen/alivc_common_margin_18"
                android:layout_marginTop="@dimen/alivc_common_margin_28"
                android:layout_weight="1"
                android:text="@string/alivc_longvideo_cache_video_title"
                android:textColor="@color/alivc_common_bg_black"
                android:textSize="@dimen/alivc_common_font_15"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/alivc_cache_video_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/alivc_common_margin_28"
                android:layout_marginRight="@dimen/alivc_common_margin_16"
                android:drawableRight="@drawable/alivc_longvideo_right_back_arrow"
                android:drawablePadding="@dimen/alivc_common_padding_2"
                android:text="@string/alivc_longvideo_more_content"
                android:textColor="@color/alivc_longvideo_font_more"
                android:textSize="@dimen/alivc_common_font_13" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/alivc_cache_video_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/alivc_common_margin_12"
            android:layout_marginLeft="@dimen/alivc_common_margin_12"
            android:layout_marginTop="@dimen/alivc_common_margin_12" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/alivc_common_height_group_12"
            android:layout_marginTop="@dimen/alivc_common_margin_28"
            android:background="@color/alivc_longvideo_mine_bg_gray" />

        <LinearLayout
            android:id="@+id/alivc_ll_setting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/alivc_common_height_group_60"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/alivc_common_padding_26">

            <ImageView
                android:layout_width="@dimen/alivc_longvideo_width_icon_setting"
                android:layout_height="@dimen/alivc_longvideo_height_icon_setting"
                android:src="@drawable/alivc_longvideo_icon_setting" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/alivc_common_margin_20"
                android:layout_weight="1"
                android:text="@string/alivc_longvideo_mine_setting"
                android:textColor="@color/alivc_common_bg_black"
                android:textSize="@dimen/alivc_common_font_15" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:gravity="end"
                android:paddingRight="@dimen/alivc_common_padding_18"
                android:src="@drawable/alivc_longvideo_right_back_arrow" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/alivc_longvideo_mine_bg_gray" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>